Update 'xh6it5f8g-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bee9e46339.shoh.p3.openshiftapps.com/rhtap/rhtap-qe:95c19b7f1a42b6a93d93821aca3cfc9b0639a9bd@sha256:063993691df9736128289bae0b61696a6009955e250327d96dbac024957110c2

--- a/components/xh6it5f8g-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/xh6it5f8g-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xh6it5f8g-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bee9e46339.shoh.p3.openshiftapps.com/rhtap/rhtap-qe:95c19b7f1a42b6a93d93821aca3cfc9b0639a9bd@sha256:063993691df9736128289bae0b61696a6009955e250327d96dbac024957110c2
+          name: container-image
